ingress-rules.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-server-ingress
  namespace: default
spec:
  rules:
  - host: sample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-server-service
            port:
              number: 3000 # port open by service
